<resources>
    <string name="app_name">MealPlanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="houseNumber">House Number</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="loginCred">Login Credentials</string>
    <string name="showPassword">Show Password</string>
    <string name="postalCode">Postal Code</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="userStatus">User Status</string>
    <string name="next">Next</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="deliveryFrequency">Delivery Frequency (Per Week)</string>
    <string name="mealQuantity">Meal Quantity</string>
    <string name="mealType">Meal Type</string>
    <string name="vegetable">Vegetable</string>
    <string name="meat">Meat</string>
    <string name="both">Both</string>
    <string name="nameOnCard">Name on card</string>
    <string name="cardNumber">Card number</string>
    <string name="expiryDate">Expiry Date(MMYY)</string>
    <string name="securityCode">CVC</string>
    <string name="addMealOrder">Add meal order</string>
    <string name="users">Users</string>
    <string name="meals">Meals</string>
    <string name="type">Meal type: </string>
    <string name="addMeal">Add meal</string>
    <string name="update">Update</string>
    <string name="menu">Menus</string>
    <string name="addMenu">Add menu</string>
    <string name="menuName">Menu name</string>
    <string name="add">Add</string>
    <string name="sendEmail">Send</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="changePassword">Change Password</string>
    <string name="deliveryInfo">DELIVERY INFORMATION</string>
    <string name="loginInfo">LOGIN INFORMATION</string>
    <string name="paymentInfo">PAYMENT INFORMATION</string>
    <string name="changePayment">Change Payment</string>
    <string name="saveUser">Save</string>
    <string name="backLogin">Back to login</string>
    <string name="change">Change</string>
    <string name="thankyouMessage">Thank you for registering for Meal Planner.</string>

    <string-array name="province_canada">
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NS</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
    </string-array>

    <string-array name="status">
        <item>Active</item>
        <item>Inactive</item>
    </string-array>

    <string-array name="mealTypeList">
        <item>Meat</item>
        <item>Vegetable</item>
        <item>Both</item>
    </string-array>

    <string-array name="sort">
        <item>Sort by</item>
        <item>Name (A-Z)</item>
        <item>Name (Z-A)</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_signup">SignupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_usersview">usersview</string>
</resources>
