<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/paymentFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PaymentDetailsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
...
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/saveUser"
            android:textAlignment="center"
            android:textColor="@color/white"
...
