...
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/personalNextButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
...
